--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
         "monolog/monolog": "1.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*"
+        "phpunit/phpunit": "~4.5"
     },
     "license": "MIT",
     "authors": [
@@ -16,9 +16,5 @@
     ],
     "autoload": {
         "psr-0": {"Dubture": "src/"}
-    },
-    "minimum-stability": "dev",
-    "config": {
-        "bin-dir": "bin"
-    }    
+    }
 }
