--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
         "monolog/monolog": "1.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.5"
+        "phpunit/phpunit": "^6.5"
     },
     "license": "MIT",
     "authors": [
