--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "pulse00/monolog-parser",
     "description": "A parser for monolog log entries",
     "require": {
-        "monolog/monolog": "1.*"
+        "monolog/monolog": "1.*|2.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.5"
